--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,10 @@ main h2 {
     margin-top: 5px;
 }
 
+.future-weather-box-style {
+    background-color: blue;
+}
+
 .hidden {
     visibility: hidden;
 }
